replacing grid grid-uniform class with grid new for main content to fix layout issue

--- a/assets/custom.css
+++ b/assets/custom.css
@@ -68,6 +68,10 @@
     padding-right: 3em;
 }
 
+#insta-feed h2 {
+    color: #A687ED;
+}
+
 #footer {
     background-color: aliceblue;
     width: 85%;
